--- a/kubernetes-manifests/nginx-dep.yml
+++ b/kubernetes-manifests/nginx-dep.yml
@@ -1,20 +1,19 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: nginx-deployment
-  namespace: german-env1
+  name: nginx
 spec:
+  replicas: 2
   selector:
     matchLabels:
       app: nginx
-  replicas: 2
   template:
     metadata:
       labels:
         app: nginx
     spec:
       containers:
-      - name: nginx
-        image: nginx:1.14.0
-        ports:
-        - containerPort: 80
+        - image: index.docker.io/library/nginx
+          name: nginx
+          ports:
+            - containerPort: 80
