--- a/kubernetes-manifests/nginx-dep.yml
+++ b/kubernetes-manifests/nginx-dep.yml
@@ -19,4 +19,5 @@ spec:
           ports:
             - containerPort: 80
           env:
-            - a: ${lol}
+            - name: a
+              value: ${lol}
