--- a/config/clouddriver.yml
+++ b/config/clouddriver.yml
@@ -14,7 +14,7 @@ kubernetes:
         omitKinds: []
         customResources: []
         cachingPolicies: []
-        kubeconfigFile: /tmp/dynamic_accounts/kubeconfig.yml
+        kubeconfigFile: /custom-volume/kubecfg-remote
         oAuthScopes: []
         onlySpinnakerManaged: false
       - name: k8s-acc-2
@@ -30,294 +30,7 @@ kubernetes:
         omitKinds: []
         customResources: []
         cachingPolicies: []
-        kubeconfigFile: /tmp/dynamic_accounts/kubeconfig.yml
+        kubeconfigFile: /custom-volume/kubecfg-remote
         oAuthScopes: []
         onlySpinnakerManaged: false
-      - name: k8s-acc-3
-        requiredGroupMembership: []
-        providerVersion: V2
-        permissions: {}
-        dockerRegistries: []
-        configureImagePullSecrets: true
-        cacheThreads: 1
-        namespaces: []
-        omitNamespaces: []
-        kinds: []
-        omitKinds: []
-        customResources: []
-        cachingPolicies: []
-        kubeconfigFile: /tmp/dynamic_accounts/kubeconfig.yml
-        oAuthScopes: []
-        onlySpinnakerManaged: false
-      - name: k8s-acc-4
-        requiredGroupMembership: []
-        providerVersion: V2
-        permissions: {}
-        dockerRegistries: []
-        configureImagePullSecrets: true
-        cacheThreads: 1
-        namespaces: []
-        omitNamespaces: []
-        kinds: []
-        omitKinds: []
-        customResources: []
-        cachingPolicies: []
-        kubeconfigFile: /tmp/dynamic_accounts/kubeconfig.yml
-        oAuthScopes: []
-        onlySpinnakerManaged: false
-      - name: k8s-acc-5
-        requiredGroupMembership: []
-        providerVersion: V2
-        permissions: {}
-        dockerRegistries: []
-        configureImagePullSecrets: true
-        cacheThreads: 1
-        namespaces: []
-        omitNamespaces: []
-        kinds: []
-        omitKinds: []
-        customResources: []
-        cachingPolicies: []
-        kubeconfigFile: /tmp/dynamic_accounts/kubeconfig.yml
-        oAuthScopes: []
-        onlySpinnakerManaged: false
-      - name: k8s-acc-6
-        requiredGroupMembership: []
-        providerVersion: V2
-        permissions: {}
-        dockerRegistries: []
-        configureImagePullSecrets: true
-        cacheThreads: 1
-        namespaces: []
-        omitNamespaces: []
-        kinds: []
-        omitKinds: []
-        customResources: []
-        cachingPolicies: []
-        kubeconfigFile: /tmp/dynamic_accounts/kubeconfig.yml
-        oAuthScopes: []
-        onlySpinnakerManaged: false
-      - name: k8s-acc-7
-        requiredGroupMembership: []
-        providerVersion: V2
-        permissions: {}
-        dockerRegistries: []
-        configureImagePullSecrets: true
-        cacheThreads: 1
-        namespaces: []
-        omitNamespaces: []
-        kinds: []
-        omitKinds: []
-        customResources: []
-        cachingPolicies: []
-        kubeconfigFile: /tmp/dynamic_accounts/kubeconfig.yml
-        oAuthScopes: []
-        onlySpinnakerManaged: false
-      - name: k8s-acc-8
-        requiredGroupMembership: []
-        providerVersion: V2
-        permissions: {}
-        dockerRegistries: []
-        configureImagePullSecrets: true
-        cacheThreads: 1
-        namespaces: []
-        omitNamespaces: []
-        kinds: []
-        omitKinds: []
-        customResources: []
-        cachingPolicies: []
-        kubeconfigFile: /tmp/dynamic_accounts/kubeconfig.yml
-        oAuthScopes: []
-        onlySpinnakerManaged: false
-      - name: k8s-acc-9
-        requiredGroupMembership: []
-        providerVersion: V2
-        permissions: {}
-        dockerRegistries: []
-        configureImagePullSecrets: true
-        cacheThreads: 1
-        namespaces: []
-        omitNamespaces: []
-        kinds: []
-        omitKinds: []
-        customResources: []
-        cachingPolicies: []
-        kubeconfigFile: /tmp/dynamic_accounts/kubeconfig.yml
-        oAuthScopes: []
-        onlySpinnakerManaged: false
-      - name: k8s-acc-10
-        requiredGroupMembership: []
-        providerVersion: V2
-        permissions: {}
-        dockerRegistries: []
-        configureImagePullSecrets: true
-        cacheThreads: 1
-        namespaces: []
-        omitNamespaces: []
-        kinds: []
-        omitKinds: []
-        customResources: []
-        cachingPolicies: []
-        kubeconfigFile: /tmp/dynamic_accounts/kubeconfig.yml
-        oAuthScopes: []
-        onlySpinnakerManaged: false
-      - name: k8s-acc-11
-        requiredGroupMembership: []
-        providerVersion: V2
-        permissions: {}
-        dockerRegistries: []
-        configureImagePullSecrets: true
-        cacheThreads: 1
-        namespaces: []
-        omitNamespaces: []
-        kinds: []
-        omitKinds: []
-        customResources: []
-        cachingPolicies: []
-        kubeconfigFile: /tmp/dynamic_accounts/kubeconfig.yml
-        oAuthScopes: []
-        onlySpinnakerManaged: false
-      - name: k8s-acc-12
-        requiredGroupMembership: []
-        providerVersion: V2
-        permissions: {}
-        dockerRegistries: []
-        configureImagePullSecrets: true
-        cacheThreads: 1
-        namespaces: []
-        omitNamespaces: []
-        kinds: []
-        omitKinds: []
-        customResources: []
-        cachingPolicies: []
-        kubeconfigFile: /tmp/dynamic_accounts/kubeconfig.yml
-        oAuthScopes: []
-        onlySpinnakerManaged: false
-      - name: k8s-acc-13
-        requiredGroupMembership: []
-        providerVersion: V2
-        permissions: {}
-        dockerRegistries: []
-        configureImagePullSecrets: true
-        cacheThreads: 1
-        namespaces: []
-        omitNamespaces: []
-        kinds: []
-        omitKinds: []
-        customResources: []
-        cachingPolicies: []
-        kubeconfigFile: /tmp/dynamic_accounts/kubeconfig.yml
-        oAuthScopes: []
-        onlySpinnakerManaged: false
-      - name: k8s-acc-14
-        requiredGroupMembership: []
-        providerVersion: V2
-        permissions: {}
-        dockerRegistries: []
-        configureImagePullSecrets: true
-        cacheThreads: 1
-        namespaces: []
-        omitNamespaces: []
-        kinds: []
-        omitKinds: []
-        customResources: []
-        cachingPolicies: []
-        kubeconfigFile: /tmp/dynamic_accounts/kubeconfig.yml
-        oAuthScopes: []
-        onlySpinnakerManaged: false
-      - name: k8s-acc-15
-        requiredGroupMembership: []
-        providerVersion: V2
-        permissions: {}
-        dockerRegistries: []
-        configureImagePullSecrets: true
-        cacheThreads: 1
-        namespaces: []
-        omitNamespaces: []
-        kinds: []
-        omitKinds: []
-        customResources: []
-        cachingPolicies: []
-        kubeconfigFile: /tmp/dynamic_accounts/kubeconfig.yml
-        oAuthScopes: []
-        onlySpinnakerManaged: false
-      - name: k8s-acc-16
-        requiredGroupMembership: []
-        providerVersion: V2
-        permissions: {}
-        dockerRegistries: []
-        configureImagePullSecrets: true
-        cacheThreads: 1
-        namespaces: []
-        omitNamespaces: []
-        kinds: []
-        omitKinds: []
-        customResources: []
-        cachingPolicies: []
-        kubeconfigFile: /tmp/dynamic_accounts/kubeconfig.yml
-        oAuthScopes: []
-        onlySpinnakerManaged: false
-      - name: k8s-acc-17
-        requiredGroupMembership: []
-        providerVersion: V2
-        permissions: {}
-        dockerRegistries: []
-        configureImagePullSecrets: true
-        cacheThreads: 1
-        namespaces: []
-        omitNamespaces: []
-        kinds: []
-        omitKinds: []
-        customResources: []
-        cachingPolicies: []
-        kubeconfigFile: /tmp/dynamic_accounts/kubeconfig.yml
-        oAuthScopes: []
-        onlySpinnakerManaged: false
-      - name: k8s-acc-18
-        requiredGroupMembership: []
-        providerVersion: V2
-        permissions: {}
-        dockerRegistries: []
-        configureImagePullSecrets: true
-        cacheThreads: 1
-        namespaces: []
-        omitNamespaces: []
-        kinds: []
-        omitKinds: []
-        customResources: []
-        cachingPolicies: []
-        kubeconfigFile: /tmp/dynamic_accounts/kubeconfig.yml
-        oAuthScopes: []
-        onlySpinnakerManaged: false
-      - name: k8s-acc-19
-        requiredGroupMembership: []
-        providerVersion: V2
-        permissions: {}
-        dockerRegistries: []
-        configureImagePullSecrets: true
-        cacheThreads: 1
-        namespaces: []
-        omitNamespaces: []
-        kinds: []
-        omitKinds: []
-        customResources: []
-        cachingPolicies: []
-        kubeconfigFile: /tmp/dynamic_accounts/kubeconfig.yml
-        oAuthScopes: []
-        onlySpinnakerManaged: false
-      - name: k8s-acc-20
-        requiredGroupMembership: []
-        providerVersion: V2
-        permissions: {}
-        dockerRegistries: []
-        configureImagePullSecrets: true
-        cacheThreads: 1
-        namespaces: []
-        omitNamespaces: []
-        kinds: []
-        omitKinds: []
-        customResources: []
-        cachingPolicies: []
-        kubeconfigFile: /tmp/dynamic_accounts/kubeconfig.yml
-        oAuthScopes: []
-        onlySpinnakerManaged: false        
+     
