--- a/config/clouddriver.yml
+++ b/config/clouddriver.yml
@@ -641,4 +641,184 @@ kubernetes:
     kubeconfigFile: /custom-volume/kubecfg-remote
     oAuthScopes: []
     onlySpinnakerManaged: false
-  
+
+cloudfoundry:
+primaryAccount: cf-1
+enabled: true
+accounts:
+- api: api.sys.sanmarcos.cf-app.com
+  appsManagerUri: https://apps.sys.sanmarcos.cf-app.com
+  name: cf-1
+  password: encrypted:k8s!n:spin-secrets!k:cf-password
+  permissions: {}
+  requiredGroupMembership: []
+  skipSslValidation: true
+  user: admin
+- api: api.sys.sanmarcos.cf-app.com
+  appsManagerUri: https://apps.sys.sanmarcos.cf-app.com
+  name: cf-2
+  password: encrypted:k8s!n:spin-secrets!k:cf-password
+  permissions: {}
+  requiredGroupMembership: []
+  skipSslValidation: true
+  user: admin
+- api: api.sys.sanmarcos.cf-app.com
+  appsManagerUri: https://apps.sys.sanmarcos.cf-app.com
+  name: cf-3
+  password: encrypted:k8s!n:spin-secrets!k:cf-password
+  permissions: {}
+  requiredGroupMembership: []
+  skipSslValidation: true
+  user: admin
+- api: api.sys.sanmarcos.cf-app.com
+  appsManagerUri: https://apps.sys.sanmarcos.cf-app.com
+  name: cf-4
+  password: encrypted:k8s!n:spin-secrets!k:cf-password
+  permissions: {}
+  requiredGroupMembership: []
+  skipSslValidation: true
+  user: admin
+- api: api.sys.sanmarcos.cf-app.com
+  appsManagerUri: https://apps.sys.sanmarcos.cf-app.com
+  name: cf-5
+  password: encrypted:k8s!n:spin-secrets!k:cf-password
+  permissions: {}
+  requiredGroupMembership: []
+  skipSslValidation: true
+  user: admin
+- api: api.sys.sanmarcos.cf-app.com
+  appsManagerUri: https://apps.sys.sanmarcos.cf-app.com
+  name: cf-6
+  password: encrypted:k8s!n:spin-secrets!k:cf-password
+  permissions: {}
+  requiredGroupMembership: []
+  skipSslValidation: true
+  user: admin
+- api: api.sys.sanmarcos.cf-app.com
+  appsManagerUri: https://apps.sys.sanmarcos.cf-app.com
+  name: cf-7
+  password: encrypted:k8s!n:spin-secrets!k:cf-password
+  permissions: {}
+  requiredGroupMembership: []
+  skipSslValidation: true
+  user: admin
+- api: api.sys.sanmarcos.cf-app.com
+  appsManagerUri: https://apps.sys.sanmarcos.cf-app.com
+  name: cf-8
+  password: encrypted:k8s!n:spin-secrets!k:cf-password
+  permissions: {}
+  requiredGroupMembership: []
+  skipSslValidation: true
+  user: admin
+- api: api.sys.sanmarcos.cf-app.com
+  appsManagerUri: https://apps.sys.sanmarcos.cf-app.com
+  name: cf-9
+  password: encrypted:k8s!n:spin-secrets!k:cf-password
+  permissions: {}
+  requiredGroupMembership: []
+  skipSslValidation: true
+  user: admin
+- api: api.sys.sanmarcos.cf-app.com
+  appsManagerUri: https://apps.sys.sanmarcos.cf-app.com
+  name: cf-10
+  password: encrypted:k8s!n:spin-secrets!k:cf-password
+  permissions: {}
+  requiredGroupMembership: []
+  skipSslValidation: true
+  user: admin
+- api: api.sys.sanmarcos.cf-app.com
+  appsManagerUri: https://apps.sys.sanmarcos.cf-app.com
+  name: cf-11
+  password: encrypted:k8s!n:spin-secrets!k:cf-password
+  permissions: {}
+  requiredGroupMembership: []
+  skipSslValidation: true
+  user: admin
+- api: api.sys.sanmarcos.cf-app.com
+  appsManagerUri: https://apps.sys.sanmarcos.cf-app.com
+  name: cf-12
+  password: encrypted:k8s!n:spin-secrets!k:cf-password
+  permissions: {}
+  requiredGroupMembership: []
+  skipSslValidation: true
+  user: admin
+- api: api.sys.sanmarcos.cf-app.com
+  appsManagerUri: https://apps.sys.sanmarcos.cf-app.com
+  name: cf-13
+  password: encrypted:k8s!n:spin-secrets!k:cf-password
+  permissions: {}
+  requiredGroupMembership: []
+  skipSslValidation: true
+  user: admin
+- api: api.sys.sanmarcos.cf-app.com
+  appsManagerUri: https://apps.sys.sanmarcos.cf-app.com
+  name: cf-14
+  password: encrypted:k8s!n:spin-secrets!k:cf-password
+  permissions: {}
+  requiredGroupMembership: []
+  skipSslValidation: true
+  user: admin
+- api: api.sys.sanmarcos.cf-app.com
+  appsManagerUri: https://apps.sys.sanmarcos.cf-app.com
+  name: cf-15
+  password: encrypted:k8s!n:spin-secrets!k:cf-password
+  permissions: {}
+  requiredGroupMembership: []
+  skipSslValidation: true
+  user: admin
+- api: api.sys.sanmarcos.cf-app.com
+  appsManagerUri: https://apps.sys.sanmarcos.cf-app.com
+  name: cf-16
+  password: encrypted:k8s!n:spin-secrets!k:cf-password
+  permissions: {}
+  requiredGroupMembership: []
+  skipSslValidation: true
+  user: admin
+- api: api.sys.sanmarcos.cf-app.com
+  appsManagerUri: https://apps.sys.sanmarcos.cf-app.com
+  name: cf-17
+  password: encrypted:k8s!n:spin-secrets!k:cf-password
+  permissions: {}
+  requiredGroupMembership: []
+  skipSslValidation: true
+  user: admin
+- api: api.sys.sanmarcos.cf-app.com
+  appsManagerUri: https://apps.sys.sanmarcos.cf-app.com
+  name: cf-18
+  password: encrypted:k8s!n:spin-secrets!k:cf-password
+  permissions: {}
+  requiredGroupMembership: []
+  skipSslValidation: true
+  user: admin
+- api: api.sys.sanmarcos.cf-app.com
+  appsManagerUri: https://apps.sys.sanmarcos.cf-app.com
+  name: cf-19
+  password: encrypted:k8s!n:spin-secrets!k:cf-password
+  permissions: {}
+  requiredGroupMembership: []
+  skipSslValidation: true
+  user: admin
+- api: api.sys.sanmarcos.cf-app.com
+  appsManagerUri: https://apps.sys.sanmarcos.cf-app.com
+  name: cf-20
+  password: encrypted:k8s!n:spin-secrets!k:cf-password
+  permissions: {}
+  requiredGroupMembership: []
+  skipSslValidation: true
+  user: admin
+- api: api.sys.sanmarcos.cf-app.com
+  appsManagerUri: https://apps.sys.sanmarcos.cf-app.com
+  name: cf-21
+  password: encrypted:k8s!n:spin-secrets!k:cf-password
+  permissions: {}
+  requiredGroupMembership: []
+  skipSslValidation: true
+  user: admin
+- api: api.sys.sanmarcos.cf-app.com
+  appsManagerUri: https://apps.sys.sanmarcos.cf-app.com
+  name: cf-22
+  password: encrypted:k8s!n:spin-secrets!k:cf-password
+  permissions: {}
+  requiredGroupMembership: []
+  skipSslValidation: true
+  user: admin
