--- a/config/clouddriver.yml
+++ b/config/clouddriver.yml
@@ -649,7 +649,7 @@ accounts:
 - api: api.sys.sanmarcos.cf-app.com
   appsManagerUri: https://apps.sys.sanmarcos.cf-app.com
   name: cf-1
-  password: encrypted:k8s!n:spin-secrets!k:cf-password
+  password: ${CLOUDDRIVER_SPIN_SECRETS_CF_PASSWORD}
   permissions: {}
   requiredGroupMembership: []
   skipSslValidation: true
@@ -657,7 +657,7 @@ accounts:
 - api: api.sys.sanmarcos.cf-app.com
   appsManagerUri: https://apps.sys.sanmarcos.cf-app.com
   name: cf-2
-  password: encrypted:k8s!n:spin-secrets!k:cf-password
+  password: ${CLOUDDRIVER_SPIN_SECRETS_CF_PASSWORD}
   permissions: {}
   requiredGroupMembership: []
   skipSslValidation: true
@@ -665,7 +665,7 @@ accounts:
 - api: api.sys.sanmarcos.cf-app.com
   appsManagerUri: https://apps.sys.sanmarcos.cf-app.com
   name: cf-3
-  password: encrypted:k8s!n:spin-secrets!k:cf-password
+  password: ${CLOUDDRIVER_SPIN_SECRETS_CF_PASSWORD}
   permissions: {}
   requiredGroupMembership: []
   skipSslValidation: true
@@ -673,7 +673,7 @@ accounts:
 - api: api.sys.sanmarcos.cf-app.com
   appsManagerUri: https://apps.sys.sanmarcos.cf-app.com
   name: cf-4
-  password: encrypted:k8s!n:spin-secrets!k:cf-password
+  password: ${CLOUDDRIVER_SPIN_SECRETS_CF_PASSWORD}
   permissions: {}
   requiredGroupMembership: []
   skipSslValidation: true
@@ -681,7 +681,7 @@ accounts:
 - api: api.sys.sanmarcos.cf-app.com
   appsManagerUri: https://apps.sys.sanmarcos.cf-app.com
   name: cf-5
-  password: encrypted:k8s!n:spin-secrets!k:cf-password
+  password: ${CLOUDDRIVER_SPIN_SECRETS_CF_PASSWORD}
   permissions: {}
   requiredGroupMembership: []
   skipSslValidation: true
@@ -689,7 +689,7 @@ accounts:
 - api: api.sys.sanmarcos.cf-app.com
   appsManagerUri: https://apps.sys.sanmarcos.cf-app.com
   name: cf-6
-  password: encrypted:k8s!n:spin-secrets!k:cf-password
+  password: ${CLOUDDRIVER_SPIN_SECRETS_CF_PASSWORD}
   permissions: {}
   requiredGroupMembership: []
   skipSslValidation: true
@@ -697,7 +697,7 @@ accounts:
 - api: api.sys.sanmarcos.cf-app.com
   appsManagerUri: https://apps.sys.sanmarcos.cf-app.com
   name: cf-7
-  password: encrypted:k8s!n:spin-secrets!k:cf-password
+  password: ${CLOUDDRIVER_SPIN_SECRETS_CF_PASSWORD}
   permissions: {}
   requiredGroupMembership: []
   skipSslValidation: true
@@ -705,7 +705,7 @@ accounts:
 - api: api.sys.sanmarcos.cf-app.com
   appsManagerUri: https://apps.sys.sanmarcos.cf-app.com
   name: cf-8
-  password: encrypted:k8s!n:spin-secrets!k:cf-password
+  password: ${CLOUDDRIVER_SPIN_SECRETS_CF_PASSWORD}
   permissions: {}
   requiredGroupMembership: []
   skipSslValidation: true
@@ -713,7 +713,7 @@ accounts:
 - api: api.sys.sanmarcos.cf-app.com
   appsManagerUri: https://apps.sys.sanmarcos.cf-app.com
   name: cf-9
-  password: encrypted:k8s!n:spin-secrets!k:cf-password
+  password: ${CLOUDDRIVER_SPIN_SECRETS_CF_PASSWORD}
   permissions: {}
   requiredGroupMembership: []
   skipSslValidation: true
@@ -721,7 +721,7 @@ accounts:
 - api: api.sys.sanmarcos.cf-app.com
   appsManagerUri: https://apps.sys.sanmarcos.cf-app.com
   name: cf-10
-  password: encrypted:k8s!n:spin-secrets!k:cf-password
+  password: ${CLOUDDRIVER_SPIN_SECRETS_CF_PASSWORD}
   permissions: {}
   requiredGroupMembership: []
   skipSslValidation: true
@@ -729,7 +729,7 @@ accounts:
 - api: api.sys.sanmarcos.cf-app.com
   appsManagerUri: https://apps.sys.sanmarcos.cf-app.com
   name: cf-11
-  password: encrypted:k8s!n:spin-secrets!k:cf-password
+  password: ${CLOUDDRIVER_SPIN_SECRETS_CF_PASSWORD}
   permissions: {}
   requiredGroupMembership: []
   skipSslValidation: true
@@ -737,7 +737,7 @@ accounts:
 - api: api.sys.sanmarcos.cf-app.com
   appsManagerUri: https://apps.sys.sanmarcos.cf-app.com
   name: cf-12
-  password: encrypted:k8s!n:spin-secrets!k:cf-password
+  password: ${CLOUDDRIVER_SPIN_SECRETS_CF_PASSWORD}
   permissions: {}
   requiredGroupMembership: []
   skipSslValidation: true
@@ -745,7 +745,7 @@ accounts:
 - api: api.sys.sanmarcos.cf-app.com
   appsManagerUri: https://apps.sys.sanmarcos.cf-app.com
   name: cf-13
-  password: encrypted:k8s!n:spin-secrets!k:cf-password
+  password: ${CLOUDDRIVER_SPIN_SECRETS_CF_PASSWORD}
   permissions: {}
   requiredGroupMembership: []
   skipSslValidation: true
@@ -753,7 +753,7 @@ accounts:
 - api: api.sys.sanmarcos.cf-app.com
   appsManagerUri: https://apps.sys.sanmarcos.cf-app.com
   name: cf-14
-  password: encrypted:k8s!n:spin-secrets!k:cf-password
+  password: ${CLOUDDRIVER_SPIN_SECRETS_CF_PASSWORD}
   permissions: {}
   requiredGroupMembership: []
   skipSslValidation: true
@@ -761,7 +761,7 @@ accounts:
 - api: api.sys.sanmarcos.cf-app.com
   appsManagerUri: https://apps.sys.sanmarcos.cf-app.com
   name: cf-15
-  password: encrypted:k8s!n:spin-secrets!k:cf-password
+  password: ${CLOUDDRIVER_SPIN_SECRETS_CF_PASSWORD}
   permissions: {}
   requiredGroupMembership: []
   skipSslValidation: true
@@ -769,7 +769,7 @@ accounts:
 - api: api.sys.sanmarcos.cf-app.com
   appsManagerUri: https://apps.sys.sanmarcos.cf-app.com
   name: cf-16
-  password: encrypted:k8s!n:spin-secrets!k:cf-password
+  password: ${CLOUDDRIVER_SPIN_SECRETS_CF_PASSWORD}
   permissions: {}
   requiredGroupMembership: []
   skipSslValidation: true
@@ -777,7 +777,7 @@ accounts:
 - api: api.sys.sanmarcos.cf-app.com
   appsManagerUri: https://apps.sys.sanmarcos.cf-app.com
   name: cf-17
-  password: encrypted:k8s!n:spin-secrets!k:cf-password
+  password: ${CLOUDDRIVER_SPIN_SECRETS_CF_PASSWORD}
   permissions: {}
   requiredGroupMembership: []
   skipSslValidation: true
@@ -785,7 +785,7 @@ accounts:
 - api: api.sys.sanmarcos.cf-app.com
   appsManagerUri: https://apps.sys.sanmarcos.cf-app.com
   name: cf-18
-  password: encrypted:k8s!n:spin-secrets!k:cf-password
+  password: ${CLOUDDRIVER_SPIN_SECRETS_CF_PASSWORD}
   permissions: {}
   requiredGroupMembership: []
   skipSslValidation: true
@@ -793,7 +793,7 @@ accounts:
 - api: api.sys.sanmarcos.cf-app.com
   appsManagerUri: https://apps.sys.sanmarcos.cf-app.com
   name: cf-19
-  password: encrypted:k8s!n:spin-secrets!k:cf-password
+  password: ${CLOUDDRIVER_SPIN_SECRETS_CF_PASSWORD}
   permissions: {}
   requiredGroupMembership: []
   skipSslValidation: true
@@ -801,7 +801,7 @@ accounts:
 - api: api.sys.sanmarcos.cf-app.com
   appsManagerUri: https://apps.sys.sanmarcos.cf-app.com
   name: cf-20
-  password: encrypted:k8s!n:spin-secrets!k:cf-password
+  password: ${CLOUDDRIVER_SPIN_SECRETS_CF_PASSWORD}
   permissions: {}
   requiredGroupMembership: []
   skipSslValidation: true
@@ -809,7 +809,7 @@ accounts:
 - api: api.sys.sanmarcos.cf-app.com
   appsManagerUri: https://apps.sys.sanmarcos.cf-app.com
   name: cf-21
-  password: encrypted:k8s!n:spin-secrets!k:cf-password
+  password: ${CLOUDDRIVER_SPIN_SECRETS_CF_PASSWORD}
   permissions: {}
   requiredGroupMembership: []
   skipSslValidation: true
@@ -817,7 +817,7 @@ accounts:
 - api: api.sys.sanmarcos.cf-app.com
   appsManagerUri: https://apps.sys.sanmarcos.cf-app.com
   name: cf-22
-  password: encrypted:k8s!n:spin-secrets!k:cf-password
+  password: ${CLOUDDRIVER_SPIN_SECRETS_CF_PASSWORD}
   permissions: {}
   requiredGroupMembership: []
   skipSslValidation: true
