--- a/config/clouddriver.yml
+++ b/config/clouddriver.yml
@@ -8,7 +8,8 @@ kubernetes:
     dockerRegistries: []
     configureImagePullSecrets: true
     cacheThreads: 1
-    namespaces: []
+    namespaces:
+        - spinnaker
     omitNamespaces: []
     kinds: []
     omitKinds: []
@@ -24,7 +25,8 @@ kubernetes:
     dockerRegistries: []
     configureImagePullSecrets: true
     cacheThreads: 1
-    namespaces: []
+    namespaces:
+        - spinnaker
     omitNamespaces: []
     kinds: []
     omitKinds: []
@@ -40,7 +42,8 @@ kubernetes:
     dockerRegistries: []
     configureImagePullSecrets: true
     cacheThreads: 1
-    namespaces: []
+    namespaces:
+        - spinnaker
     omitNamespaces: []
     kinds: []
     omitKinds: []
@@ -56,7 +59,8 @@ kubernetes:
     dockerRegistries: []
     configureImagePullSecrets: true
     cacheThreads: 1
-    namespaces: []
+    namespaces:
+        - spinnaker
     omitNamespaces: []
     kinds: []
     omitKinds: []
@@ -72,7 +76,8 @@ kubernetes:
     dockerRegistries: []
     configureImagePullSecrets: true
     cacheThreads: 1
-    namespaces: []
+    namespaces:
+        - spinnaker
     omitNamespaces: []
     kinds: []
     omitKinds: []
@@ -88,7 +93,8 @@ kubernetes:
     dockerRegistries: []
     configureImagePullSecrets: true
     cacheThreads: 1
-    namespaces: []
+    namespaces:
+        - spinnaker
     omitNamespaces: []
     kinds: []
     omitKinds: []
@@ -104,7 +110,8 @@ kubernetes:
     dockerRegistries: []
     configureImagePullSecrets: true
     cacheThreads: 1
-    namespaces: []
+    namespaces:
+        - spinnaker
     omitNamespaces: []
     kinds: []
     omitKinds: []
@@ -120,7 +127,8 @@ kubernetes:
     dockerRegistries: []
     configureImagePullSecrets: true
     cacheThreads: 1
-    namespaces: []
+    namespaces:
+        - spinnaker
     omitNamespaces: []
     kinds: []
     omitKinds: []
@@ -136,7 +144,8 @@ kubernetes:
     dockerRegistries: []
     configureImagePullSecrets: true
     cacheThreads: 1
-    namespaces: []
+    namespaces:
+        - spinnaker
     omitNamespaces: []
     kinds: []
     omitKinds: []
@@ -152,7 +161,8 @@ kubernetes:
     dockerRegistries: []
     configureImagePullSecrets: true
     cacheThreads: 1
-    namespaces: []
+    namespaces:
+        - spinnaker
     omitNamespaces: []
     kinds: []
     omitKinds: []
@@ -168,7 +178,8 @@ kubernetes:
     dockerRegistries: []
     configureImagePullSecrets: true
     cacheThreads: 1
-    namespaces: []
+    namespaces:
+        - spinnaker
     omitNamespaces: []
     kinds: []
     omitKinds: []
@@ -184,7 +195,8 @@ kubernetes:
     dockerRegistries: []
     configureImagePullSecrets: true
     cacheThreads: 1
-    namespaces: []
+    namespaces:
+        - spinnaker
     omitNamespaces: []
     kinds: []
     omitKinds: []
@@ -200,7 +212,8 @@ kubernetes:
     dockerRegistries: []
     configureImagePullSecrets: true
     cacheThreads: 1
-    namespaces: []
+    namespaces:
+        - spinnaker
     omitNamespaces: []
     kinds: []
     omitKinds: []
@@ -216,7 +229,8 @@ kubernetes:
     dockerRegistries: []
     configureImagePullSecrets: true
     cacheThreads: 1
-    namespaces: []
+    namespaces:
+        - spinnaker
     omitNamespaces: []
     kinds: []
     omitKinds: []
@@ -232,7 +246,8 @@ kubernetes:
     dockerRegistries: []
     configureImagePullSecrets: true
     cacheThreads: 1
-    namespaces: []
+    namespaces:
+        - spinnaker
     omitNamespaces: []
     kinds: []
     omitKinds: []
@@ -248,7 +263,8 @@ kubernetes:
     dockerRegistries: []
     configureImagePullSecrets: true
     cacheThreads: 1
-    namespaces: []
+    namespaces:
+        - spinnaker
     omitNamespaces: []
     kinds: []
     omitKinds: []
@@ -264,7 +280,8 @@ kubernetes:
     dockerRegistries: []
     configureImagePullSecrets: true
     cacheThreads: 1
-    namespaces: []
+    namespaces:
+        - spinnaker
     omitNamespaces: []
     kinds: []
     omitKinds: []
@@ -280,7 +297,8 @@ kubernetes:
     dockerRegistries: []
     configureImagePullSecrets: true
     cacheThreads: 1
-    namespaces: []
+    namespaces:
+        - spinnaker
     omitNamespaces: []
     kinds: []
     omitKinds: []
@@ -296,7 +314,8 @@ kubernetes:
     dockerRegistries: []
     configureImagePullSecrets: true
     cacheThreads: 1
-    namespaces: []
+    namespaces:
+        - spinnaker
     omitNamespaces: []
     kinds: []
     omitKinds: []
@@ -312,7 +331,8 @@ kubernetes:
     dockerRegistries: []
     configureImagePullSecrets: true
     cacheThreads: 1
-    namespaces: []
+    namespaces:
+        - spinnaker
     omitNamespaces: []
     kinds: []
     omitKinds: []
@@ -328,7 +348,8 @@ kubernetes:
     dockerRegistries: []
     configureImagePullSecrets: true
     cacheThreads: 1
-    namespaces: []
+    namespaces:
+        - spinnaker
     omitNamespaces: []
     kinds: []
     omitKinds: []
@@ -344,7 +365,8 @@ kubernetes:
     dockerRegistries: []
     configureImagePullSecrets: true
     cacheThreads: 1
-    namespaces: []
+    namespaces:
+        - spinnaker
     omitNamespaces: []
     kinds: []
     omitKinds: []
@@ -360,7 +382,8 @@ kubernetes:
     dockerRegistries: []
     configureImagePullSecrets: true
     cacheThreads: 1
-    namespaces: []
+    namespaces:
+        - spinnaker
     omitNamespaces: []
     kinds: []
     omitKinds: []
@@ -376,7 +399,8 @@ kubernetes:
     dockerRegistries: []
     configureImagePullSecrets: true
     cacheThreads: 1
-    namespaces: []
+    namespaces:
+        - spinnaker
     omitNamespaces: []
     kinds: []
     omitKinds: []
@@ -392,7 +416,8 @@ kubernetes:
     dockerRegistries: []
     configureImagePullSecrets: true
     cacheThreads: 1
-    namespaces: []
+    namespaces:
+        - spinnaker
     omitNamespaces: []
     kinds: []
     omitKinds: []
@@ -408,7 +433,8 @@ kubernetes:
     dockerRegistries: []
     configureImagePullSecrets: true
     cacheThreads: 1
-    namespaces: []
+    namespaces:
+        - spinnaker
     omitNamespaces: []
     kinds: []
     omitKinds: []
@@ -424,7 +450,8 @@ kubernetes:
     dockerRegistries: []
     configureImagePullSecrets: true
     cacheThreads: 1
-    namespaces: []
+    namespaces:
+        - spinnaker
     omitNamespaces: []
     kinds: []
     omitKinds: []
@@ -440,7 +467,8 @@ kubernetes:
     dockerRegistries: []
     configureImagePullSecrets: true
     cacheThreads: 1
-    namespaces: []
+    namespaces:
+        - spinnaker
     omitNamespaces: []
     kinds: []
     omitKinds: []
@@ -456,7 +484,8 @@ kubernetes:
     dockerRegistries: []
     configureImagePullSecrets: true
     cacheThreads: 1
-    namespaces: []
+    namespaces:
+        - spinnaker
     omitNamespaces: []
     kinds: []
     omitKinds: []
@@ -472,7 +501,8 @@ kubernetes:
     dockerRegistries: []
     configureImagePullSecrets: true
     cacheThreads: 1
-    namespaces: []
+    namespaces:
+        - spinnaker
     omitNamespaces: []
     kinds: []
     omitKinds: []
@@ -488,7 +518,8 @@ kubernetes:
     dockerRegistries: []
     configureImagePullSecrets: true
     cacheThreads: 1
-    namespaces: []
+    namespaces:
+        - spinnaker
     omitNamespaces: []
     kinds: []
     omitKinds: []
@@ -504,7 +535,8 @@ kubernetes:
     dockerRegistries: []
     configureImagePullSecrets: true
     cacheThreads: 1
-    namespaces: []
+    namespaces:
+        - spinnaker
     omitNamespaces: []
     kinds: []
     omitKinds: []
@@ -520,7 +552,8 @@ kubernetes:
     dockerRegistries: []
     configureImagePullSecrets: true
     cacheThreads: 1
-    namespaces: []
+    namespaces:
+        - spinnaker
     omitNamespaces: []
     kinds: []
     omitKinds: []
@@ -536,7 +569,8 @@ kubernetes:
     dockerRegistries: []
     configureImagePullSecrets: true
     cacheThreads: 1
-    namespaces: []
+    namespaces:
+        - spinnaker
     omitNamespaces: []
     kinds: []
     omitKinds: []
@@ -552,7 +586,8 @@ kubernetes:
     dockerRegistries: []
     configureImagePullSecrets: true
     cacheThreads: 1
-    namespaces: []
+    namespaces:
+        - spinnaker
     omitNamespaces: []
     kinds: []
     omitKinds: []
@@ -568,7 +603,8 @@ kubernetes:
     dockerRegistries: []
     configureImagePullSecrets: true
     cacheThreads: 1
-    namespaces: []
+    namespaces:
+        - spinnaker
     omitNamespaces: []
     kinds: []
     omitKinds: []
@@ -584,7 +620,8 @@ kubernetes:
     dockerRegistries: []
     configureImagePullSecrets: true
     cacheThreads: 1
-    namespaces: []
+    namespaces:
+        - spinnaker
     omitNamespaces: []
     kinds: []
     omitKinds: []
@@ -600,7 +637,8 @@ kubernetes:
     dockerRegistries: []
     configureImagePullSecrets: true
     cacheThreads: 1
-    namespaces: []
+    namespaces:
+        - spinnaker
     omitNamespaces: []
     kinds: []
     omitKinds: []
@@ -616,7 +654,8 @@ kubernetes:
     dockerRegistries: []
     configureImagePullSecrets: true
     cacheThreads: 1
-    namespaces: []
+    namespaces:
+        - spinnaker
     omitNamespaces: []
     kinds: []
     omitKinds: []
@@ -632,7 +671,8 @@ kubernetes:
     dockerRegistries: []
     configureImagePullSecrets: true
     cacheThreads: 1
-    namespaces: []
+    namespaces:
+        - spinnaker
     omitNamespaces: []
     kinds: []
     omitKinds: []
@@ -648,7 +688,8 @@ kubernetes:
     dockerRegistries: []
     configureImagePullSecrets: true
     cacheThreads: 1
-    namespaces: []
+    namespaces:
+        - spinnaker
     omitNamespaces: []
     kinds: []
     omitKinds: []
@@ -664,7 +705,8 @@ kubernetes:
     dockerRegistries: []
     configureImagePullSecrets: true
     cacheThreads: 1
-    namespaces: []
+    namespaces:
+        - spinnaker
     omitNamespaces: []
     kinds: []
     omitKinds: []
@@ -680,7 +722,8 @@ kubernetes:
     dockerRegistries: []
     configureImagePullSecrets: true
     cacheThreads: 1
-    namespaces: []
+    namespaces:
+        - spinnaker
     omitNamespaces: []
     kinds: []
     omitKinds: []
@@ -696,7 +739,8 @@ kubernetes:
     dockerRegistries: []
     configureImagePullSecrets: true
     cacheThreads: 1
-    namespaces: []
+    namespaces:
+        - spinnaker
     omitNamespaces: []
     kinds: []
     omitKinds: []
@@ -712,7 +756,8 @@ kubernetes:
     dockerRegistries: []
     configureImagePullSecrets: true
     cacheThreads: 1
-    namespaces: []
+    namespaces:
+        - spinnaker
     omitNamespaces: []
     kinds: []
     omitKinds: []
@@ -728,7 +773,8 @@ kubernetes:
     dockerRegistries: []
     configureImagePullSecrets: true
     cacheThreads: 1
-    namespaces: []
+    namespaces:
+        - spinnaker
     omitNamespaces: []
     kinds: []
     omitKinds: []
@@ -744,7 +790,8 @@ kubernetes:
     dockerRegistries: []
     configureImagePullSecrets: true
     cacheThreads: 1
-    namespaces: []
+    namespaces:
+        - spinnaker
     omitNamespaces: []
     kinds: []
     omitKinds: []
@@ -760,7 +807,8 @@ kubernetes:
     dockerRegistries: []
     configureImagePullSecrets: true
     cacheThreads: 1
-    namespaces: []
+    namespaces:
+        - spinnaker
     omitNamespaces: []
     kinds: []
     omitKinds: []
@@ -776,7 +824,8 @@ kubernetes:
     dockerRegistries: []
     configureImagePullSecrets: true
     cacheThreads: 1
-    namespaces: []
+    namespaces:
+        - spinnaker
     omitNamespaces: []
     kinds: []
     omitKinds: []
@@ -792,7 +841,8 @@ kubernetes:
     dockerRegistries: []
     configureImagePullSecrets: true
     cacheThreads: 1
-    namespaces: []
+    namespaces:
+        - spinnaker
     omitNamespaces: []
     kinds: []
     omitKinds: []
@@ -808,7 +858,8 @@ kubernetes:
     dockerRegistries: []
     configureImagePullSecrets: true
     cacheThreads: 1
-    namespaces: []
+    namespaces:
+        - spinnaker
     omitNamespaces: []
     kinds: []
     omitKinds: []
@@ -824,7 +875,8 @@ kubernetes:
     dockerRegistries: []
     configureImagePullSecrets: true
     cacheThreads: 1
-    namespaces: []
+    namespaces:
+        - spinnaker
     omitNamespaces: []
     kinds: []
     omitKinds: []
@@ -840,7 +892,8 @@ kubernetes:
     dockerRegistries: []
     configureImagePullSecrets: true
     cacheThreads: 1
-    namespaces: []
+    namespaces:
+        - spinnaker
     omitNamespaces: []
     kinds: []
     omitKinds: []
@@ -856,7 +909,8 @@ kubernetes:
     dockerRegistries: []
     configureImagePullSecrets: true
     cacheThreads: 1
-    namespaces: []
+    namespaces:
+        - spinnaker
     omitNamespaces: []
     kinds: []
     omitKinds: []
@@ -872,7 +926,8 @@ kubernetes:
     dockerRegistries: []
     configureImagePullSecrets: true
     cacheThreads: 1
-    namespaces: []
+    namespaces:
+        - spinnaker
     omitNamespaces: []
     kinds: []
     omitKinds: []
@@ -888,7 +943,8 @@ kubernetes:
     dockerRegistries: []
     configureImagePullSecrets: true
     cacheThreads: 1
-    namespaces: []
+    namespaces:
+        - spinnaker
     omitNamespaces: []
     kinds: []
     omitKinds: []
@@ -904,7 +960,8 @@ kubernetes:
     dockerRegistries: []
     configureImagePullSecrets: true
     cacheThreads: 1
-    namespaces: []
+    namespaces:
+        - spinnaker
     omitNamespaces: []
     kinds: []
     omitKinds: []
@@ -920,7 +977,8 @@ kubernetes:
     dockerRegistries: []
     configureImagePullSecrets: true
     cacheThreads: 1
-    namespaces: []
+    namespaces:
+        - spinnaker
     omitNamespaces: []
     kinds: []
     omitKinds: []
@@ -936,7 +994,8 @@ kubernetes:
     dockerRegistries: []
     configureImagePullSecrets: true
     cacheThreads: 1
-    namespaces: []
+    namespaces:
+        - spinnaker
     omitNamespaces: []
     kinds: []
     omitKinds: []
@@ -952,7 +1011,8 @@ kubernetes:
     dockerRegistries: []
     configureImagePullSecrets: true
     cacheThreads: 1
-    namespaces: []
+    namespaces:
+        - spinnaker
     omitNamespaces: []
     kinds: []
     omitKinds: []
