--- a/config/clouddriver.yml
+++ b/config/clouddriver.yml
@@ -2,6 +2,7 @@ kubernetes:
   enabled: true
   accounts:
   - name: k8s-acc-1
+    kubectlExecutable: /custom-volume/kubectl-fake
     requiredGroupMembership: []
     providerVersion: V2
     permissions: {}
